# strip-bom

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: publish.yml  test.yml
strip_bom/: __init__.py  core.py
tests/: test_edge_cases.py  test_strip_bom.py  test_strip_bom_buffer.py  test_strip_bom_file.py  test_strip_bom_stream.py
