[project]
name = "strip-bom"
version = "1.0.0"
description = "Strip UTF-8 byte order mark (BOM) from strings, bytes, streams, and files. Inspired by the popular strip-bom npm package"
readme = "README.md"
requires-python = ">=3.8"
authors = [
  {name = "Y. Siva Sai Krishna", email = "sivasaikrishnassk@gmail.com"}
]
license = {text = "MIT"}
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Text Processing :: General",
  "Topic :: Utilities",
  "Typing :: Typed",
]
keywords = [
    "bom",
    "byte-order-mark",
    "utf-8",
    "strip",
    "remove",
    "unicode",
    "text-processing",
    "utilities",
    "utils",
    "strip-bom",
    "strip-bom-buf",
    "strip-bom-stream",
    "mit license",
    "ysskrishna",
]
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]

[project.urls]
Homepage = "https://github.com/ysskrishna/strip-bom"
Repository = "https://github.com/ysskrishna/strip-bom.git"
Issues = "https://github.com/ysskrishna/strip-bom/issues"
Changelog = "https://github.com/ysskrishna/strip-bom/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["strip_bom"]
